--- a/custom_addons/contact_travel/views/voyage_view.xml
+++ b/custom_addons/contact_travel/views/voyage_view.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+        <record id="view_voyage_tree" model="ir.ui.view">
+            <field name="name">voyage.tree</field>
+            <field name="model">voyage</field>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="name" string="Nom du Voyage"/>
+                    <field name="dateDepart" string="Date de départ"/>
+                    <field name="destination" string="Destination"/>
+                </tree>
+            </field>
+        </record>
         <record id="view_voyage_form" model="ir.ui.view">
             <field name="name">voyage.form</field>
             <field name="model">voyage</field>
