--- a/custom_addons/contact_travel/views/contact_view_inherit.xml
+++ b/custom_addons/contact_travel/views/contact_view_inherit.xml
@@ -7,7 +7,11 @@
 			<field name="inherit_id" ref="base.view_partner_form"/>
 			<field name="arch" type="xml">
 				<xpath expr="//field[@name='vat']" position="after">
-					<button name="liste_voyages" string="Voyages de l'utilisateur" type="object" class="oe_highlight"/>
+					<group>
+						<button name="liste_voyages" string="Voyages de l'utilisateur : " type="object" class="oe_highlight">
+							<field name="vlabel"/>
+						</button>
+					</group>
 				</xpath>
 			</field>	
 		</record>
